--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="l_box4">
                 <h2 class="lb_h2">Leave a comment</h2>
                 <p class="lb4_p">
-                    Please keep in mind that comments are moderated and rel="nofollow" is in use. So, please do not use a spammy keyword or a domain as your name, or else it will be deleted. Thank you!
+                    Please keep in mind that comments are moderated and rel="nofollow" is in use. So, please do not use a spammy keyword or a domain as your name, or else it will be deleted.
                 </p>
                 <div class="lb_comment">
                     <div class="comment_form">
